--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-    <title>Generator sudoku</title>
+    <title>Serwer w NodeJS</title>
+    <meta charset="UTF-8">
 </head>
 
 <body>
-    Generator sudoku
+    Przykładowa strona
 </body>
 
 </html>
